# DOMiNATION

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
assets/shaders/: terrain.frag
assets/textures/terrain/: README.md
assets_final/fallback/: missing_mesh.glb  placeholder_city_cluster.glb  placeholder_guardian_site.glb  placeholder_object.glb
campaigns/: test_campaign.json
content/: alliance_blocs.json  asset_manifest.json  atlas_manifest.json  audio_manifest.json  biome_manifest.json  biomes.json  building_styles.json  civilization_theme_manifest.json  civilization_themes.json  civilizations.json  glb_placeholder_audit.md  ideologies.json  industrial_recipes.json  lod_manifest.json  mythic_guardians.json  object_styles.json  terrain_styles.json  unit_styles.json  world_events.json
content/textures/complete_rts_pack/: README.md
content/textures/effects/: README.md
content/textures/icons/: README.md
content/textures/resources/: README.md
content/textures/terrain/: README.md
content/textures/ui/icon_pack/: README.md  icon_pack_manifest.json  preview.html
content/textures/units/: README.md
docs/: ai_telemetry.md  architecture.md  armageddon_condition.md  asset_naming_conventions.md  audio_system.md  balance_telemetry.md  biome_system.md  blender_pipeline.md  build.md  camera_navigation_system.md  campaign_presentation.md  campaign_system.md  civilization_architecture.md  civilization_content_packs.md  civilization_format.md  civilization_identity_system.md  combat_roles_and_counters.md  content_format.md  content_resolution_model.md  design.md  dom_asset_studio.md  game_setup_flow.md  ideology_bloc_system.md  industrial_economy_system.md  lua_scripting.md  match_flow.md  mountain_mining_system.md  mountain_warfare_system.md  mythic_guardians.md  objective_system.md  rail_logistics_system.md  render_pipeline.md  render_style_schema.md  render_stylesheet_pipeline.md  rendering.md  rts_camera_system.md  runtime_animation_system.md  runtime_model_rendering.md  scenario_format.md  shader_pipeline.md  (+12 more)
engine/assets/: asset_manager.cpp  asset_manager.h  asset_registry.cpp  asset_registry.h  texture_atlas.cpp  texture_atlas.h
engine/audio/: audio_events.cpp  audio_events.h  audio_resolution.cpp  audio_resolution.h  audio_system.cpp  audio_system.h
engine/core/: README.md  time.cpp  time.h
engine/debug/: debug_panels.cpp  debug_panels.h  debug_visuals.cpp  debug_visuals.h
engine/editor/: object_placement.cpp  object_placement.h  scenario_editor.cpp  scenario_editor.h  terrain_editor.cpp  terrain_editor.h
engine/nav/: README.md
engine/platform/: README.md  app.cpp  app.h
engine/render/: README.md  content_resolution.cpp  content_resolution.h  gltf_runtime_loader.cpp  gltf_runtime_loader.h  model_cache.cpp  model_cache.h  model_render_pass.cpp  model_render_pass.h  model_shader.cpp  model_shader.h  render_stylesheet.cpp  render_stylesheet.h  renderer.cpp  renderer.h  runtime_animation.cpp  runtime_animation.h  shader_program.cpp  shader_program.h  terrain_chunk_mesh.cpp  terrain_chunk_mesh.h  terrain_materials.cpp  terrain_materials.h  terrain_shader.cpp  terrain_shader.h
engine/sim/: README.md  simulation.cpp  simulation.h
engine/tools/: asset_browser.cpp  asset_browser.h
engine/ui/: diplomacy_panel.cpp  diplomacy_panel.h  hud.cpp  hud.h  production_menu.cpp  production_menu.h  research_panel.cpp  research_panel.h  ui_alerts.cpp  ui_alerts.h  ui_icons.cpp  ui_icons.h  ui_theme.cpp  ui_theme.h
engine/util/: README.md
export/meshes/: Fighter.glb  china_rail_station_a.glb
game/ai/: simple_ai.cpp  simple_ai.h
game/content/: default_content.json
game/rules/: README.md  game_rules.cpp  game_rules.h
game/ui/: hud.cpp  hud.h
scenarios/: armageddon_test.json  bloc_test.json  campaign_chain_m1.json  campaign_chain_m2_alpha.json  campaign_chain_m2_fallback.json  campaign_test.json  civ_content_test.json  civ_expansion_test.json  civ_test.json  diplomacy_test.json  industrial_economy_test.json  logistics_test.json  mountain_mining_test.json  mythic_guardians_multi_test.json  mythic_guardians_test.json  naval_test.json  rail_logistics_test.json  strategic_deterrence_test.json  strategic_warfare_test.json  test_scenario.json  theater_operations_test.json  trigger_test.json  world_events_test.json
scripts/: campaign_chain.lua  campaign_test.lua
tools/: README.md  dom_asset_studio_main.cpp  generate_archer_unit.py  generate_coastal_port.py  generate_complete_rts_asset_pack.py  generate_deep_ocean_tile.py  generate_dirt_tile.py  generate_drone_unit.py  generate_explosion_effect.py  generate_farm_structure.py  generate_farmland_tile.py  generate_fish_resource_node.py  generate_forest_resource_cluster.py  generate_infantry_unit.py  generate_medieval_house.py  generate_military_barracks.py  generate_missile_trail_effect.py  generate_ore_resource_node.py  generate_rts_icons.py  generate_strategic_bomber_unit.py  generate_tank_unit.py  generate_transport_ship.py  generate_ui_icon_pack.py  generate_warship_unit.py  generate_worker_unit.py  validate_content_pipeline.py
tools/asset_pipeline/: build_atlases.py  package_assets.py
tools/blender/: export_selected_assets.py  render_billboard_sheet.py  render_preview_icons.py  setup_reference_scene.py  validate_asset_conventions.py
tools/dom_asset_studio/: file_watch.cpp  file_watch.h  studio_app.cpp  studio_app.h
